--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -25,5 +25,10 @@ $containers: (
 // The (maximum) number of columns.
 $columns: 16;
 
+// Conditional loading of modules.
+$enable-debug: false;
+$enable-offsets: true;
+$enable-orders: true;
+
 // Grid gutter width.
 $gutter: $base;
