--- a/css/deflex.css
+++ b/css/deflex.css
@@ -8,8 +8,8 @@
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 0.375rem;
-  padding-left: 0.375rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .gutterless [class|="col"] {
@@ -5030,15 +5030,32 @@
 }
 
 .container {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
+@media (min-width: 600px) {
+  .container {
+    max-width: 576px;
+  }
+}
+@media (min-width: 900px) {
+  .container {
+    max-width: 864px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1176px;
+  }
+}
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -0.375rem;
-  margin-left: -0.375rem;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
 }
 .row.gutterless {
   margin-left: 0;
