Added equal width column.

--- a/scss/_columns.scss
+++ b/scss/_columns.scss
@@ -11,6 +11,12 @@
   @extend %col;
 }
 
+.col {
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+}
+
 .gutterless {
   [class|="col"] {
     padding-left: 0;
