--- a/css/deflex.css
+++ b/css/deflex.css
@@ -12,6 +12,12 @@
   padding-left: 0.5rem;
 }
 
+.col {
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
+}
+
 .gutterless [class|="col"] {
   padding-left: 0;
   padding-right: 0;
