Set default breakpoints for functions and mixins

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,5 @@
 
-@mixin media-breakpoint-up($name, $breakpoints) {
+@mixin media-breakpoint-up($name, $breakpoints: $breakpoints) {
   $min: breakpoint-min($name, $breakpoints);
 
   @if $min {
