--- a/css/deflex.css
+++ b/css/deflex.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-[class|="col"] {
+[class|="col"],
+[class*=" col-"], .col {
   min-height: 1px;
   padding-right: 0.75rem;
   padding-left: 0.75rem;
@@ -18,7 +19,8 @@
   max-width: 100%;
 }
 
-.gutterless [class|="col"] {
+.gutterless [class|="col"],
+.gutterless [class*=" col-"] {
   padding-left: 0;
   padding-right: 0;
 }
