--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 
 // The base unit.
-$base: .75rem;
+$base: .75rem !default;
 
 // Sensible breakpoints.
 // Inspired by https://medium.freecodecamp.com/the-100-correct-way-to-do-css-breakpoints-88d6a5ba1862
@@ -26,9 +26,9 @@ $containers: (
 $columns: 16;
 
 // Conditional loading of modules.
-$enable-debug: false;
-$enable-offsets: true;
-$enable-orders: true;
+$enable-debug: false !default;
+$enable-offsets: true !default;
+$enable-orders: true !default;
 
 // Grid gutter width.
-$gutter: 2 * $base;
+$gutter: 2 * $base !default;
