--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -1,9 +1,10 @@
+@use "sass:math";
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: $gutter / 2;
-  padding-right: $gutter / 2;
+  padding-left: math.div($gutter, 2);
+  padding-right: math.div($gutter, 2);
   width: 100%;
 }
 
