--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,7 +23,7 @@ $containers: (
 ) !default;
 
 // The (maximum) number of columns.
-$columns: 16;
+$columns: 16 !default;
 
 // Conditional loading of modules.
 $enable-debug: false !default;
