--- a/scss/_rows.scss
+++ b/scss/_rows.scss
@@ -1,9 +1,10 @@
+@use "sass:math";
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: ($gutter / -2);
-  margin-left: ($gutter / -2);
+  margin-right: math.div($gutter, -2);
+  margin-left: math.div($gutter, -2);
 
   &.gutterless {
     margin-left: 0;
